# gitHelper

./: Dockerfile  README.md  ghHelper.sh  neogit.py  pyproject.toml  requirements.txt  setup.py
git_helper/: __init__.py  analyzer.py  api.py  cli.py  errors.py  gh_pages.py  git_core.py  plugin_manager.py  repo_manager.py  ssh_tools.py  tracer.py
git_helper/core/: __init__.py  git.py  github.py
git_helper/diagnostics/: __init__.py  analyzer.py  query_engine.py  report_builder.py
git_helper/gui/: __init__.py  app.py
git_helper/plugins/: __init__.py  base.py  code_break_analyzer.py  diffsummarizer_bot.py
git_helper/ui/: __init__.py  palette.py
git_helper/utils/: __init__.py  config.py  logger.py  settings.py  token_manager.py  updater.py
neogit_tui/: app.py
neogit_tui/plugins/: __init__.py  ml_suggester.py
tests/: test_config.py  test_git_service.py  test_token_manager.py
