[project]
name = "git-helper"
version = "2.0.0"
description = "Modern, context-aware Git and GitHub assistant"
requires-python = ">=3.11"
readme = "README.md"
authors = [{name = "Christopher Hirschauer"}]
license = "MIT"
license-files = ["LICENSE.md"]
dependencies = [
    "typer>=0.9",
    "rich>=13.7",
    "prompt_toolkit>=3.0",
    "PyGithub>=1.58",
    "keyring>=24.2",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
gui = [
    "kivy>=2.2",
    "kivymd>=1.1.1",
]

[tool.setuptools]
packages = ["git_helper"]
[project.scripts]
git-helper = "git_helper.cli:main"
githelper = "git_helper.__main__:main"
